# a2a-agent-registry-on-aws-POC

./: .gitignore  README.md
client/: README.md  pyproject.toml
client/src/agent_registry_client/: __init__.py  client.py  exceptions.py  lifecycle.py  m2m_client.py  models.py
client/tests/: conftest.py  test_client.py
docs/: api.md  deployment-journal.md  local-development.md
infrastructure/: package-lock.json  package.json
infrastructure/lib/: agent-registry-stack.ts  agent-registry-web-ui-stack.ts
infrastructure/lib/constructs/: s3-vectors-construct.ts
integration_test/: pyproject.toml  run_tests.sh  test_agent_registry_api.py  test_comprehensive_heartbeat.py  test_delete_agent.py  test_embedding_error_handling.py  test_heartbeat_simple.py  test_summary.py
lambda/: requirements.txt
lambda/src/: __init__.py  handler.py  requirements.txt
lambda/src/services/: agent_service.py  embedding_service.py  health_service.py  search_service.py
lambda/src/utils/: __init__.py  logging.py  response.py  validation.py
lambda/tests/: conftest.py  test_agent_service.py  test_embedding_integration.py  test_embedding_service.py  test_handler.py  test_health_service.py  test_search_service.py  test_validation.py
web-ui/: .dockerignore  .env.development  .env.example  .env.local  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json
web-ui/public/: index.html
web-ui/src/: App.test.tsx  App.tsx
web-ui/src/components/: AgentEditModal.tsx  AgentRegistrationModal.tsx  AgentRegistry.tsx  HelpPanel.tsx  Layout.tsx  Navigation.tsx  ProtectedRoute.tsx
web-ui/src/config/: agentRegistry.ts
web-ui/src/contexts/: AgentRegistryContext.tsx
web-ui/src/hooks/: useAgentTable.ts  useAuth.ts  useNavigation.ts  useTablePreferences.ts
web-ui/src/pages/: AgentsPage.tsx  RegisterPage.tsx
web-ui/src/services/: AgentRegistryClient.test.ts  AgentRegistryClient.ts  AuthService.ts
web-ui/src/types/: AgentCard.ts
web-ui/src/utils/: agentCardValidation.ts  router.ts
